# CARCOSA

./: .dockerignore  .gitattributes  .gitignore  ANALYSIS_EXAMPLES.md  ANTIGRAVITY_AUDIT_FINAL.md  ANTIGRAVITY_PLAN_AUDIT_REPORT.md  AUDIT_PHYSICAL_RULES_REPORT.md  CHANGELOG.md  CONSOLIDATED_IMPLEMENTATION_PRIORITY.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.app  Dockerfile.deps  Dockerfile.gpu  Makefile  README.md  RNG_FIX_REPORT.md  RNG_REVIEW_GUIDE.md  RUNS_ORGANIZATION.md  RUN_DATA_STRUCTURE.md  SESSION_SUMMARY.md  WORKFLOW_AFTER_CHANGES.md  add_p02_tests.py  analyze_version.py  check_syntax.py  compare_versions.py  docker-compose.dev.yml  docker-compose.yml  fix_board.py  implement_p03_p05.py  implement_p04.py  pyproject.toml  reproduce_victory_bug.py  requirements-ml.txt  requirements.txt  run.ps1  run_versioned.py  test_imports.py  verify_replay_summary.json
.claude/: settings.local.json
configs/: experiment.default.yaml  experiment.smoke.yaml
docs/: AI_DATA_GUIDE.md  ANALYSIS_AND_RECOMMENDATIONS.md  AUDIT_B1_B6_FINAL.md  AUDIT_P0_REPORT.md  AUDIT_PHYSICAL_RULES_REPORT.md  Carcosa_Canon_P0_extracted.md  Carcosa_Canon_P0_extracted.md:mshield  Carcosa_Libro_Tecnico_CANON.md  Carcosa_Libro_Tecnico_v0_1_extracted.md  Carcosa_Libro_Tecnico_v0_1_extracted.md:mshield  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  ESTADO_ACTUAL_2026_01_20.md  ESTADO_ACTUAL_2026_01_23.md  IMPLEMENTATION_PLAN_2026_01_19.md  INCONSISTENCIES_REPORT.md  NEURAL_NETWORK_TRAINING_GUIDE.md  NOTES.md  RUNS_ORGANIZATION.md  RUN_DATA_STRUCTURE.md  (+5 more)
engine/: rng.py  (+17 more)
(+204 files in other folders)
