[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carcosa"
version = "0.1.0"
description = "Carcosa core simulation engine (IA-ready)"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["engine", "engine.effects", "sim"]
